Fixes bug 85923 "Following a link and then clicking back displays a blank page" r=gordon, sr=rpotts, a=blizzard